feat: migrate provider to coingecko ids and update api docs
